# pico-c2pa

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.claude/: PROJECT.md  project_rules.md
app-c2pa/: Cargo.toml
app-c2pa/elf/: riscv32im-pico-zkvm-elf
app-c2pa/src/: main.rs
app/elf/: riscv32im-pico-zkvm-elf
app/src/: main.rs
c2pa-frontend/: app.js  index.html  query.html  query.js  styles.css
c2pa-service/: Cargo.toml
c2pa-service/src/: main.rs
cropper/: Cargo.toml  sigcert.p12
cropper/src/: main.rs
lib/src/: lib.rs
proofs/: 0e7ba2ca-e8da-49f7-bdc4-f4a3f0d52cbe.json  ab0bc4a4-ae54-409d-befd-2d39f70d3973.json
prover-c2pa/: Cargo.toml
prover-c2pa/src/: main.rs
prover/src/: main.rs
verifier/: Cargo.toml  README.md
verifier/src/: main.rs  verifier_test.rs
