[package]
name = "c2pa-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.prover-c2pa]
path = "../prover-c2pa"
