[package]
name = "cropper"
version = "0.1.0"
edition = "2024"

[dependencies]
c2pa = { version = "0.76", features = ["file_io", "add_thumbnails"] }
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = "1.0"
serde_json = "1.0"

[workspace.dependencies]
c2pa = { version = "0.76", features = ["file_io", "add_thumbnails"] }
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.3.0" }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0"
