[package]
name = "prover-c2pa"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.3.0" }
bincode = "1.3.3"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0"
c2pa = { version = "0.76", features = ["file_io", "add_thumbnails"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
